--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,15 @@
 #MySQL Config
+#first datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/employeemanager
+spring.datasource.username=root
+spring.datasource.password=password
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
+#second datasource
+spring.datasource.url=jdbc:mysql://localhost:3306/registration
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.show-sql=true
