--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,18 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
 #second datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/registration
-spring.datasource.username=root
-spring.datasource.password=password
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.secondDatasource.url=jdbc:mysql://localhost:3306/registration
+#spring.secondDatasource.username=root
+#spring.secondDatasource.password=password
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.userName=hello
+spring.mail.password=hello
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.starttls.required=true
+
